# LumenOS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
doc/: json_schema.md
frontend/: README.md  index.html  tailwind.config.js
frontend/src/: App.tsx  Event.tsx  Events.tsx  index.css  index.tsx
frontend/src/components/: ActivityBaseConfig.tsx  ActivityCard.tsx  ActivityField.tsx  ActivityIcons.tsx  Header.tsx  NavBar.tsx  SportCard.tsx  SportConfig.tsx  UtilityComponents.tsx  UtilityIcons.tsx
frontend/src/pages/: Activities.tsx  Advertisements.tsx  Games.tsx  Settings.tsx  SportConfig.tsx
frontend/src/pages/activityConfig/: BaseballConfig.tsx  BasketballConfig.tsx  FootballConfig.tsx  SoccerConfig.tsx  TennisConfig.tsx  VolleyballConfig.tsx
frontend/src/pages/activity_config/: BaseballConfig.tsx  SoccerConfig.tsx
frontend/src/pages/sport_config/: BaseballConfig.tsx  BasketballConfig.tsx  FootballConfig.tsx  SoccerConfig.tsx  TennisConfig.tsx  VolleyballConfig.tsx
src/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
src/lumen/: app_task.cpp  app_task.hpp  button_callback.cpp  button_callback.hpp  callback_context.hpp
src/lumen/activity/: activity.cpp  activity.hpp  connect.cpp  connect.hpp  context.cpp  context.hpp  display.hpp  field.cpp  field.hpp  football.cpp  football.hpp  snapshot.cpp  soccer.cpp  soccer.hpp  team.cpp  team.hpp
src/lumen/activity/field/: advertisement.cpp  advertisement.hpp  field.hpp  number.cpp  number.hpp  team.cpp  team.hpp  text.cpp  text.hpp  timer.cpp  timer.hpp
src/lumen/hardware/: button.cpp  button.hpp  display.cpp  display.hpp  led_button.cpp  led_button.hpp  led_pin.cpp  led_pin.hpp  rgb_button.cpp  rgb_button.hpp  rocker_switch.cpp  rocker_switch.hpp  sd_card.cpp  sd_card.hpp  single_led_button.cpp  single_led_button.hpp  timer.cpp  timer.hpp
src/lumen/hardware/button/: button.cpp  button.hpp  dual_led_button.cpp  dual_led_button.hpp  led_button.cpp  led_button.hpp  rg_led_button.cpp  rg_led_button.hpp  rgb_button.cpp  rgb_button.hpp  rocker_switch.cpp  rocker_switch.hpp  single_led_button.cpp  single_led_button.hpp
src/lumen/net/: mdns.cpp  wifi.cpp  wifi.hpp
src/lumen/web/: error.cpp  error.hpp  event.cpp  event.hpp  server.cpp  server.hpp
src/lumen/web/event/: event_source.hpp  stream.cpp  stream.hpp
src/lumen/web/handler/: advertisement.cpp  advertisement.hpp  common.cpp  common.hpp  event.cpp  event.hpp  football.cpp  football.hpp  soccer.cpp  soccer.hpp
